[package]
name = "tracker"
version = "0.2.0"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2021"
description = "A macro to track changes on structs"
repository = "https://github.com/AaronErhardt/Tracker"
readme = "README.md"
license = "Apache-2.0 OR MIT"

keywords = ["track", "tracker", "change"]
categories = ["data-structures"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "macros"
]

[dependencies]
#tracker-macros = { path = "macros" }
tracker-macros = "0.1.7"
