[package]
name = "tracker-macros"
version = "0.2.0"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2021"
description = "Macros for the tracker crate"
repository = "https://github.com/AaronErhardt/Tracker"
readme = "../README.md"
license = "Apache-2.0 OR MIT"

keywords = ["track", "tracker", "change"]
categories = ["data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
